--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@mui/icons-material": "^5.11.16"
+    "@mui/icons-material": "^5.11.16",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0"
   }
 }
