--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^3.2.0",
+    "path": "^0.12.7",
     "sequelize": "^6.29.3"
   },
   "scripts": {
@@ -24,5 +26,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "sequelize-erd": "^1.3.1"
+  }
 }
