--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "react-hooks": "^1.0.1"
+    "node-sass": "^9.0.0",
+    "react-hooks": "^1.0.1",
+    "swiper": "^9.3.2"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
