Finish Show more Component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
+  "options":{
+    "allowedHosts": ["localhost", "localhost"], 
+    "proxy": "http://localhost:8080"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
