--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "node-sass": "^9.0.0",
     "react-hooks": "^1.0.1",
-    "swiper": "^9.3.2"
+    "react-icons": "^4.10.1",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "sass": "^1.62.1"
