--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
