--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@reduxjs/toolkit": "^1.9.5",
@@ -14,6 +18,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
+    "fortawesome": "^0.0.1-security",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
