--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "mysql2": "^3.2.0",
     "path": "^0.12.7",
     "sequelize": "^6.29.3",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "sass": "^9.5.1"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
