add package and change db config to production

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,16 @@
     "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mysql2": "^3.2.0",
-    "path": "^0.12.7",
-    "sequelize": "^6.29.3",
     "nodemon": "^2.0.21",
-    "sass": "^1.64.1"
+    "path": "^0.12.7",
+    "sass": "^1.64.1",
+    "sequelize": "^6.29.3"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
